chore: update project configuration and dependencies
- Added go-track-api.json to .gitignore.
- Updated app.json to change the app icon and include expo-local-authentication plugin with Face ID permission.
- Modified biome.json to adjust complexity and style rules.
- Updated package.json and package-lock.json to include new dependencies: axios, @react-native-async-storage/async-storage, and zod, along with their respective versions.
- Refactored index.tsx to redirect to the Login page.

--- a/biome.json
+++ b/biome.json
@@ -26,6 +26,13 @@
       },
       "nursery": {
         "useSortedClasses": "info"
+      },
+      "complexity": {
+        "noUselessCatch": "off",
+        "noUselessFragments": "off"
+      },
+      "style": {
+        "noUnusedTemplateLiteral": "off"
       }
     }
   },
