chore: refactor project structure and update dependencies
- Updated .gitignore to exclude .env files.
- Changed app.json to update the app icon and include new dependencies for expo-font and expo-web-browser.
- Removed unused babel.config.js and metro.config.js files.
- Updated orval.config.ts to change the path for the custom mutator.
- Modified package.json and package-lock.json to include new dependencies: @hookform/resolvers and react-hook-form, and updated existing dependencies.
- Deleted tailwind.config.js as it is no longer needed.
- Refactored Login component to use react-hook-form for form handling and added biometric authentication support.
- Updated token storage logic to handle access and refresh tokens more effectively.

--- a/app.json
+++ b/app.json
@@ -4,13 +4,12 @@
     "slug": "mobile",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/splash-icon.png",
+    "icon": "./assets/images/icon.png",
     "scheme": "mobile",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "splash": {
       "image": "./assets/images/splash-icon.png",
-      "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
     "ios": {
@@ -37,7 +36,9 @@
         {
           "faceIDPermission": "Allow $(PRODUCT_NAME) to use Face ID."
         }
-      ]
+      ],
+      "expo-font",
+      "expo-web-browser"
     ],
     "experiments": {
       "typedRoutes": true
