--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo/vector-icons": "^14.1.0",
     "@hookform/resolvers": "^5.2.1",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-navigation/material-top-tabs": "^7.3.6",
     "@react-navigation/native": "^7.1.6",
     "axios": "^1.11.0",
     "expo": "53.0.22",
@@ -27,6 +28,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
+    "jest-expo": "~53.0.10",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -38,8 +40,7 @@
     "react-native-toast-message": "^2.3.3",
     "react-native-web": "~0.20.0",
     "tailwindcss": "^3.4.17",
-    "zod": "^4.1.1",
-    "jest-expo": "~53.0.10"
+    "zod": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
